fix#1 : rework html pages for correct works app after mentor comments