@@ -8,9 +8,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.kata.spring.boot_security.demo.dao.UserDAO;
 import ru.kata.spring.boot_security.demo.models.User;
-
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -66,8 +65,9 @@ public class UserServiceImpl implements UserService {
         if (user == null) {
             throw new UsernameNotFoundException(String.format("User %s not found", username));
         }
+
         return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
-                (user.getRoles()).stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList()));
+                (user.getRoles()).stream().map(role -> new SimpleGrantedAuthority(role.getName())).toList());
     }
 
 }
